--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
     <title>CIS 114 HW</title>
 </head>
 <body>
-    <h1> CIS 114 HW <br> by <br> charles greene</h1>
+    <h1> CIS 114 HW <br> by <br> Will Duncan</h1>
     <div id="container">
 <ul>
-    <li class="hoverani"><a href="HW2.html" class="link">Homework 2</a> </li>
+    <li class="hoverani"><a href="hw2.html" class="link">Homework 2</a> </li>
    
-    <li class="hoverani"><a href="HW3.html" class="link">Homework 3</a></li>
+    <li class="hoverani"><a href="hw3.html" class="link">Homework 3</a></li>
  
-    <li class="hoverani"><a href="HW4.html" class="link">Homework 4</a></li>
+    <li class="hoverani"><a href="hw4.html" class="link">Homework 4</a></li>
     
-    <li class="hoverani"><a href="HW5.html" class="link">Homework 5</a></li>
+    <li class="hoverani"><a href="hw5.html" class="link">Homework 5</a></li>
     
-    <li class="hoverani"><a href="HW6.html" class="link">Homework 6</a></li>
+    <li class="hoverani"><a href="hw6.html" class="link">Homework 6</a></li>
    
-    <li class="hoverani"><a href="HW7.html" class="link">Homework 7</a></li>
+    <li class="hoverani"><a href="hw7.html" class="link">Homework 7</a></li>
 
-    <li class="hoverani"><a href=" HW8.html" class="link">Homework 8</a></li>
+    <li class="hoverani"><a href=" hw8.html" class="link">Homework 8</a></li>
 </ul>
 </div>
 </body>
